[project]
name = "rapea"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.80.4",
    "fpdf2",
    "python-docx",
    "flet-geolocator",
    "flet-permission-handler"
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.4",
    "flet-desktop>=0.80.4",
    "flet-web>=0.80.4",
]

[tool.flet.android.permission]
"android.permission.CAMERA" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.WRITE_EXTERNAL_STORAGE" = true
"android.MANAGE_EXTERNAL_STORAGE" = true

[tool.flet]
org = "com.mycompany"
product = "rapea"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
